hphp/hack/test/typecheck/elvis_space.php.exp
File "elvis_space.php", line 4, characters 10-17:
An Elvis operator ('?:') is expected here. (Parsing[1002])
